--- a/covid-api/src/main/resources/application.yaml
+++ b/covid-api/src/main/resources/application.yaml
@@ -1,6 +1,6 @@
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/covid-db
+    url: ${DB_LINK_COVID_API}
     username: root
     password: root
   jpa:
