--- a/covid-api/src/main/resources/application.yaml
+++ b/covid-api/src/main/resources/application.yaml
@@ -1,10 +1,10 @@
 spring:
   datasource:
     url: ${DB_COVID_API}
-    username: root
-    password: root
+    username: ${MYSQL_USER}
+    password: ${MYSQL_PASSWORD}
   jpa:
-      database-platform: org.hibernate.dialect.MySQL5InnoDBDialect
+      database-platform: ${MYSQL_DATABASE}
       open-in-view: false
       show-sql: true
       hibernate.ddl-auto: update
